Match logic for GC_LOG_OPTS with bin/solr